@@ -21,11 +21,11 @@
       server, ideal for production environments.<br>
       <h2 id="toc1">Download and install Tomcat</h2>
       <a href="https://tomcat.apache.org/download-90.cgi">Download Tomcat 9</a>
-      from Apache. OpenXava also works fine with Tomcat 8. Uncompress Tomcat in
-      a folder of your choice. Go to the <i>webapps</i> folder and remove all
-      the folders inside: <i>docs, examples, host-manager, manager</i> and <i>ROOT</i>.
-      They are example and management apps that you don't want to have in a
-      production system.</div>
+      from Apache. OpenXava also works fine with Tomcat 8 and Tomcat 10.
+      Uncompress Tomcat in a folder of your choice. Go to the <i>webapps</i>
+      folder and remove all the folders inside: <i>docs, examples,
+        host-manager, manager</i> and <i>ROOT</i>. They are example and
+      management apps that you don't want to have in a production system.</div>
     <div class="wiki" style="display: block;">
       <h2 id="toc1">Create and deploy the WAR<br>
       </h2>
@@ -45,14 +45,16 @@
 $ mvn package
 </code></pre> Afterwards get the file <i>invoicing.war</i> (or y<i>ourapplicationname.war</i>)
       from <i>target</i> folder in your project and copy it to the <i>webapps</i>
-      folder of your Tomcat. Your application is already deployed.</div>
+      folder of your Tomcat. Your application is already deployed. Warning! For
+      Tomcat 10 you have to create a folder called <i>webapps-javaee</i> inside
+      Tomcat 10 folder and then copy the war file to that folder instead of <i>webapps</i>.</div>
     <div class="wiki" style="display: block;">
       <h2>Run Tomcat</h2>
       <h2><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">To
-          start your Tomcat, with Windows click on the<span> </span></span><em
-          style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">Start</em><span
+          start your Tomcat, with Windows click on the<span> </span></span><em
+          style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">Start</em><span
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><span>
-          </span>button, type<span>&nbsp;</span></span><em style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">cmd</em><span
+          </span>button, type<span>&nbsp;</span></span><em style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">cmd</em><span
           style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;"><span>&nbsp;</span>and
           press ENTER, then:</span><span style="color: rgb(80, 80, 80); font-family: arial, helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">:</span></h2>
     </div>
