@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Doc for deploying in Tomcat modified to include instructions for Tomcat 10.
 - Fix: View with @Files/@File generates a JavaScript error dialog when language is Catalan.
 - Fix: Time part not formatted correctly in DateTimeSeparatedCalendar editor with Serbian and Java 8.
 - Fix: Time part distorted on modify it in a @DateTime property using DateTimeSeparatedCalendar editor.
